docs: update api.yaml file & add swagger definitions to all controllers
